Clarify scripts term in docs

--- a/docs-v2/customize/guides/advanced/handle-errors-in-scripts.mdx
+++ b/docs-v2/customize/guides/advanced/handle-errors-in-scripts.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Handle errors in scripts'
-sidebarTitle: 'Handle errors in scripts'
-description: 'Step-by-step guide on how to handle errors in scripts.'
+title: 'Handle errors in integration scripts'
+sidebarTitle: 'Handle errors in integration scripts'
+description: 'Step-by-step guide on how to handle errors in integration scripts.'
 ---
 
 <Info>
