--- a/docs-v2/customize/guides/advanced/use-environment-variables.mdx
+++ b/docs-v2/customize/guides/advanced/use-environment-variables.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Use environment variables'
 sidebarTitle: 'Use environment variables'
-description: 'Step-by-step guide on how to use environment variables in scripts.'
+description: 'Step-by-step guide on how to use environment variables in integration scripts.'
 ---
 
 <Info>
