--- a/docs-v2/customize/overview.mdx
+++ b/docs-v2/customize/overview.mdx
@@ -21,7 +21,7 @@ Nango lets you create custom integrations through code. Unlike pre-built integra
 - Ensure code quality and manageability without compromising on flexibility.
 
 **Integration execution and management**
-- Scripts are executed on Nango's infrastructure, enabling observability, scalability, and manageability.
+- Integration scripts are executed on Nango's infrastructure, enabling observability, scalability, and manageability.
 - Leverage multiple Nango environments to streamline the deployment process
 
 **Development workflow**
