--- a/docs-v2/integrate/guides/advanced/store-customer-specific-data.mdx
+++ b/docs-v2/integrate/guides/advanced/store-customer-specific-data.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Store customer-specific data'
 sidebarTitle: 'Store customer-specific data'
-description: 'Step-by-step guide on how to store customer-specific data retrievable in your app, in Nango scripts, and on the Nango UI.'
+description: 'Step-by-step guide on how to store customer-specific data retrievable in your app, in Nango integration scripts, and on the Nango UI.'
 ---
 
 Nango lets you store arbitrary metadata on individual [connections](/understand/concepts/connections). This is useful for customizing an integration's behavior per end-customer.
