--- a/docs-v2/reference/api-configuration.mdx
+++ b/docs-v2/reference/api-configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'API configuration reference (providers.yaml)'
+title: 'API configuration (providers.yaml)'
 sidebarTitle: 'API config (providers.yaml)'
 icon: 'network-wired'
 ---
