--- a/docs-v2/reference/api/connection/post.mdx
+++ b/docs-v2/reference/api/connection/post.mdx
@@ -4,7 +4,7 @@ openapi: 'POST /connection'
 ---
 ## When to use
 
-Use this API endpoint to import existing access tokens into Nango. It is mostly meant for one-off import scripts.
+Use this API endpoint to import existing access tokens into Nango. It is mostly meant for one-off bulk imports when onboarding Nango.
 
 To trigger OAuth flows with Nango, use the [Nango frontend SDK](/reference/sdks/frontend).
 
