--- a/docs-v2/reference/integration-configuration.mdx
+++ b/docs-v2/reference/integration-configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Integration configuration reference (nango.yaml)'
+title: 'Integration configuration (nango.yaml)'
 sidebarTitle: 'Integration config (nango.yaml)'
 icon: 'arrow-right-arrow-left'
 ---
@@ -305,7 +305,7 @@ Changes to your integration configuration become active once you deploy them to 
 These changes can have significant impacts, in particular, if you: 
 - Add a sync
 - Remove a sync or an action
-- Change a model or a script
+- Change a model or an integration script
 
 ### Adding a sync
 
