--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Node reference'
+title: 'Node'
 sidebarTitle: 'Node'
 icon: 'node'
 ---
@@ -515,12 +515,12 @@ await nango.deleteConnection('<INTEGRATION-ID>', 'CONNECTION-ID');
 
 Empty response.
 
-# Scripts
+# Integration scripts
 
 
-### Get scripts config
+### Get integration scripts config
 
-Return the configuration for all scripts
+Return the configuration for all integration scripts
 
 ```ts
 const scriptsConfig = await nango.getScriptsConfig();
