--- a/docs-v2/understand/concepts/environments.mdx
+++ b/docs-v2/understand/concepts/environments.mdx
@@ -10,7 +10,7 @@ Nango supports multiple cloud environments, enabling safe development and testin
 
 # Shared workspace environments
 
-All environments within a workspace are shared among team members. Any changes you make—whether to environment settings, connections, integrations, or scripts—will reflect across your team. 
+All environments within a workspace are shared among team members. Any changes you make—whether to environment settings, connections, integrations, or integration scripts—will reflect across your team. 
 
 <Info>
 We're working on introducing personal development environments to facilitate individual testing and development. Until then, the [dry run feature](/customize/guides/create-a-custom-integration#test-your-scripts-locally) in the CLI is your go-to for local integration testing.
