--- a/docs-v2/understand/concepts/integrations.mdx
+++ b/docs-v2/understand/concepts/integrations.mdx
@@ -25,10 +25,10 @@ For OAuth, you'll input the credentials & permissions of the OAuth app you've se
 Beyond authorization, integrations include configurations for how your app uses the external API, such as:
 
 - **API reference**: Found in the "API Reference" tab, this includes information necessary for utilizing external APIs through Nango.
-- **Scripts**: Underlying scripts that facilitate Nango's interaction with the external API are listed in the Scripts tab. These [integration scripts](/understand/concepts/scripts) power the endpoints in the API reference, enabling your app to use Nango's unified API without directly dealing with the complexities of external APIs.
+- **Integration scripts**: Underlying integration scripts that facilitate Nango's interaction with the external API are listed in the Scripts tab. These [integration scripts](/understand/concepts/scripts) power the endpoints in the API reference, enabling your app to use Nango's unified API without directly dealing with the complexities of external APIs.
 
 # Flexibility and customization
-Nango stands out by not limiting you to a fixed set of endpoints & use cases. You can customize or extend the provided templates with your own scripts, allowing you to tailor the integration to your specific needs ([overview](/customize/overview)). This approach will enable you to focus on leveraging a unified API through Nango, streamlining the integration process with external services.
+Nango stands out by not limiting you to a fixed set of endpoints & use cases. You can customize or extend the provided templates with your own integration scripts, allowing you to tailor the integration to your specific needs ([overview](/customize/overview)). This approach will enable you to focus on leveraging a unified API through Nango, streamlining the integration process with external services.
 
 # Getting started with using Integrations
 
