--- a/docs-v2/understand/core-concepts.mdx
+++ b/docs-v2/understand/core-concepts.mdx
@@ -12,7 +12,7 @@ Nango improves the way applications integrate with external APIs by providing a 
 
 - **[Connections](/understand/concepts/connections):** Connections are instances of integrations for individual users or entities. They store the authentication credentials (like OAuth tokens or API keys) that allow Nango to access the external API on behalf of a specific user or entity.
 
-- **[Scripts](/understand/concepts/scripts):** Scripts are the heart of Nango's customization capabilities. They define the logic for how Nango interacts with external APIs, and run on Nango's infrastructure. Scripts are either provided by Nango as [templates](/understand/concepts/templates) or implemented by you. There are different types of scripts:
+- **[Integration scripts](/understand/concepts/scripts):** Integration scripts are the heart of Nango's customization capabilities. They define the logic for how Nango interacts with external APIs, and run on Nango's infrastructure. Scripts are either provided by Nango as [templates](/understand/concepts/templates) or implemented by you. There are different types of integration scripts:
 
     - **[Actions](/understand/concepts/actions):** Enable specific tasks (e.g., creating a contact) to be executed with an external API.
 
@@ -36,7 +36,7 @@ Developers use the unified API provided by Nango to interact with various extern
 
 **Build integration: Nango to external APIs** 
 
-Here lies Nango's unique value proposition. Unlike traditional unified APIs, Nango allows you to customize how it interacts with each external API through scripts. This means that while the interface from your app to Nango remains unified, the communication from Nango to external APIs offers unprecedented flexibility to meet your specific requirements.
+Here lies Nango's unique value proposition. Unlike traditional unified APIs, Nango allows you to customize how it interacts with each external API through integration scripts. This means that while the interface from your app to Nango remains unified, the communication from Nango to external APIs offers unprecedented flexibility to meet your specific requirements.
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
