--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -13,9 +13,9 @@ Actions shine in scenarios requiring two-way syncing or direct data manipulation
 
 # Main characteristics
 
-### Script-driven 
+### Code-based workflow 
 
-Actions differ significantly from proxies by executing predefined scripts rather than mere individual requests. This allows for complex workflows, involving intricate request orchestration and data transformations, to be executed seamlessly.
+Actions differ significantly from proxies by executing integration scripts rather than mere individual requests. This allows for complex workflows, involving intricate request orchestration and data transformations, to be executed seamlessly.
 
 ### Transient execution
 
@@ -59,7 +59,7 @@ export default async function runAction(
 }
 ```
 
-The `runAction` function kicks off when an action is triggered. It takes inputs from the trigger API/SDK request and returns outputs in the response. The `ParameterModel` and `ResponseModel` are configurable via the [integration configuration](/understand/concepts/scripts#integration-configuration) and are auto-imported into your script.
+The `runAction` function kicks off when an action is triggered. It takes inputs from the trigger API/SDK request and returns outputs in the response. The `ParameterModel` and `ResponseModel` are configurable via the [integration configuration](/understand/concepts/scripts#integration-configuration) and are auto-imported into your integration script.
 
 Actions focus solely on immediate tasks without persisting data to Nango's cache, thus calls to `nango.batchSave()`, `nango.batchUpdate()`, and `nango.batchDelete()` are not applicable. However, actions can call other actions, enabling complex workflows through the composition of multiple actions.
 
