--- a/docs-v2/understand/concepts/syncs.mdx
+++ b/docs-v2/understand/concepts/syncs.mdx
@@ -35,7 +35,7 @@ These only fetch data that has changed since the last execution, appending it to
 
 Nango leverages the timestamp of the last sync as a cursor for incremental syncs, allowing for precise data retrieval based on modifications since the previous sync execution.
 
-In the case of incremental syncing, the first sync execution is heavier because it fetches all of the historical data (how far back it should go depends on your script logic). This is called an initial sync execution in Nango. Subsequent sync executions should be lighter, particularly if your syncing frequency is high.
+In the case of incremental syncing, the first sync execution is heavier because it fetches all of the historical data (how far back it should go depends on your integration script logic). This is called an initial sync execution in Nango. Subsequent sync executions should be lighter, particularly if your syncing frequency is high.
 
 # Sync webooks
 
@@ -55,7 +55,7 @@ Deletion detection is straightforward—enable it within the integration configu
 
 **For incremental syncs**
 
-This method requires a different approach, as the data is not entirely replaced. The sync script must be adjusted to specifically request information on deleted data from the external API and mark the relevant records as deleted. This capability depends on the external API's ability to return information about deletions. Nango's [integration templates](/understand/concepts/templates) include examples of scripts designed to handle this scenario.
+This method requires a different approach, as the data is not entirely replaced. The sync script must be adjusted to specifically request information on deleted data from the external API and mark the relevant records as deleted. This capability depends on the external API's ability to return information about deletions. Nango's [integration templates](/understand/concepts/templates) include examples of integration scripts designed to handle this scenario.
 
 # Error handling
 Failed sync attempts don't automatically retry but will proceed on the next scheduled execution. You have the option to [manually trigger a new execution](#scheduling-and-execution). 
@@ -78,7 +78,7 @@ export default async function fetchData(nango: NangoSync): Promise<void> {
 }
 ```
 
-The `fetchData` function starts on the schedule indicated in your [integration configuration](/understand/concepts/scripts#integration-configuration). The `ResponseModel` is configurable via the integration configuration and is auto-imported into your script.
+The `fetchData` function starts on the schedule indicated in your [integration configuration](/understand/concepts/scripts#integration-configuration). The `ResponseModel` is configurable via the integration configuration and is auto-imported into your integration script.
 
 Unlike actions, the syncs default function doesn't take any input parameters or return anything. Sync inputs are passed via the [connection metadata](/understand/concepts/connections#connection-metadata). And instead of returning data directly like actions, syncs persist records to Nango's cache, calling `nango.batchSave()`, `nango.batchUpdate()`, and `nango.batchDelete()`. Your application later fetches the records from the cache. 
 
